More link/button contrast fixes.

--- a/src/Web/wwwroot/css/app.css
+++ b/src/Web/wwwroot/css/app.css
@@ -51,13 +51,13 @@ button {
 
 /* Styles overriding Rivet for SiteImprove issues */
 /* enhanced contrast */
-button.rvt-button {
+button.rvt-button, a.rvt-button {
     background-color: #005D8F !important;
     color: #ffffff !important;
 }
 
 /* Contrast */
-a {
+a:not(.rvt-button) {
     color: #005D8F !important;
 }
 
